# MoodMetrics

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: tweets.csv  tweets_supplementary.csv
docker/mysql/: init.sql
moodmetrics/: __init__.py  app.py  config.py  database.py  datasets.py  modeling.py  sentiment.py
reports/: evaluation.json  optimization_results.json
scripts/: docker-entrypoint.sh  evaluate_model.py  generate_report.py  import_dataset.py  init_db.py  optimize_model.py  train_model.py
tests/: test_app.py  test_datasets.py  test_evaluate_model.py  test_generate_report.py  test_modeling.py  test_optimize_model.py  test_sentiment.py
