[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "moodmetrics"
version = "0.1.0"
description = "API Flask d'analyse de sentiments pour des tweets"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1,<4",
  "joblib>=1.4,<2",
  "PyMySQL>=1.1,<2",
  "scikit-learn>=1.6,<2",
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["moodmetrics*"]

